updated all dev things
